# ChangeLog for squashmount

*bookmarkdupes-2.2:
	Martin Väth <martin at mvath.de>:
	- Display total number of bookmarks
	- Calculate in background
	- Calculate optionally asynchronously (not yet used)

*bookmarkdupes-2.1
	Martin Väth <martin at mvath.de>:
	- Display result of removing/stripping only once

*bookmarkdupes-2.0
	Martin Väth <martin at mvath.de>:
	- Continue removing/stripping in background if popup is closed,
	  and redisplay current state when popup is re-opened:
	  Other things can be done even if stripping should take ages.
	  Moreover, this solves the bug that when the popup was closed during
	  stripping in a bad moment, a bookmark might have been duplicated.
	- Add a progress bar for removing/stripping
	- Disable buttons visibly when locked
	- Hash bookmark data when searching all bookmarks, resulting in
	  slightly slower search but considerably faster stripping
	- Refactor searching, resulting in possibly slight speedup
	- Fix typo in localization id (causing strange or empty message)
	- Bugfix for detection of bookmark type
	- Various minor typo fixes in text messages

*bookmarkdupes-1.0
	Martin Väth <martin at mvath.de>:
	- Show progress when removing/stripping
	- Add emergency stop button
	- More specific messages
	- Use textContent instead of redundant child text nodes
	- Bugfix: Removing/stripping empty lists might have locked buttons
	- Code cleanup: remove unused arguments

*bookmarkdupes-0.5
	Martin Väth <martin at mvath.de>:
	- Avoid unsafe assignment to innerHTML

*bookmarkdupes-0.4
	Martin Väth <martin at mvath.de>:
	- bookmarkdupes can now also strip descriptions of bookmarks
	- Buttons accept now only left mouse button
	- Update description
	- Serialize removal of bookmarks: slower, but the only reliable way to
	  handle certain errors, e.g. if another extension modifies bookmarks
	- Avoid global variables: use nested functions and closures only

*bookmarkdupes-0.3
	Martin Väth <martin at mvath.de>: