@@ -19,6 +19,10 @@
     "message": "Leere Ordner",
     "description": "Button for listing empty folders"
   },
+  "buttonListUrl": {
+    "message": "Alle nicht-aktuellen Lesezeichen",
+    "description": "Button for listing outdated bookmarks"
+  },
   "buttonListAll": {
     "message": "Alle Lesezeichen",
     "description": "Button for listing all bookmarks"
@@ -60,7 +64,7 @@
     "description": "Button for emergency stop of display calculation"
   },
   "messageExactMatchesGroups": {
-    "message": "$TOTAL$ | $ALL$ exakte Duplikate in $GROUPS$ Gruppen",
+    "message": "$TOTAL$ (von $ALL$) exakte Duplikate in $GROUPS$ Gruppen",
     "description": "Report specified numbers of exact matches and groups of all",
     "placeholders": {
       "total": {
@@ -78,7 +82,7 @@
     }
   },
   "messageSimilarMatchesGroups": {
-    "message": "$TOTAL$ | $ALL$ ähnliche Duplikate in $GROUPS$ Gruppen",
+    "message": "$TOTAL$ (von $ALL$) ähnliche Duplikate in $GROUPS$ Gruppen",
     "description": "Report specified numbers of similar matches and groups of all",
     "placeholders": {
       "total": {
@@ -112,6 +116,28 @@
       "total": {
         "content": "$1",
         "example": "0"
+      }
+    }
+  },
+  "messageUrl": {
+    "message": "$TOTAL$ Probleme ($FAILED$ Fehler, $REDIRECTED$ umgeleitet) von $ALL$",
+    "description": "Report specified numbers of problems (failures/redirected) and of all bookmarks",
+    "placeholders": {
+      "total": {
+        "content": "$1",
+        "example": "0"
+      },
+      "unfound": {
+        "content": "$2",
+        "example": "0"
+      },
+      "redirected": {
+        "content": "$3",
+        "example": "0"
+      },
+      "all": {
+        "content": "$4",
+        "example": "1"
       }
     }
   },
